# otus_hw

./: CMakeLists.txt
.github/workflows/: cmake.yml
cmake/: gtest.cmake
src/: quadratic_equation.hpp  quadratic_equation.test.cpp
